# irl

./: .gitmodules
Stereo/: .gitignore  background_subtraction.py  better_objecttracker.py  blob_detection.py  calibrate_angles.py  demo.launch  find_object.py  goodobjecttracker.py  handleStereoData.py  image_rectification.py  linkFrames.py  match.py  opencv_imgproc.py  opticalflow.py  stereo.launch  stereo.rviz
Stereo/bgknn/: CMakeLists.txt  README.md  bgfg_KNN.cpp  bgfg_KNN.h
Stereo/bgknn/test/: CMakeLists.txt  main.cpp  main.py
Stereo/camera_info/: camera.yaml  left_camera.yaml  right_camera.yaml
Stereo/camera_info/backup/: left_camera.yaml  right_camera.yaml
Stereo/camera_info/endoscope/: left_camera.yaml  right_camera.yaml
Stereo/camera_info/old_mount/: left_camera.yaml  right_camera.yaml
Stereo/controller/: controller.ino  controller.py
dino_arms/projects/Set/: README.md  set_main.py
dino_arms/projects/actuation/: arm_write_copy.py
dino_arms/projects/sudoku_solver/: demoEdwindraw.py  getRedCircles.py  sudoku_main.py
dino_arms/projects/sudoku_solver/Khang Folder/edwin-actuation/: write_digit.py
launch/: .robot_minimal.launch.swp  stereo.launch
scripts/: PickupObj.py
